[package]
name = "ptolemy"
version = "0.1.0"
authors = ["Guilherme <sitegui@sitegui.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.1.13"
memmap = "0.7.0"
rayon = "1.3.0"
tempfile = "3.1.0"
crossbeam = "0.7.3"
petgraph = "0.5.0"
rstar = "0.7.0"
byteorder = "1.3.2"
structopt = "0.3.5"
num_cpus = "1.11.1"
flate2 = "1.0.13"
actix-web = "2.0"
actix-rt = "1.0"
failure = "0.1.6"
serde = "1.0"
polyline = "0.7"
geo-types = "0.4"

[workspace]

members = ["py_ptolemy"]