[package]
name = "ptolemy"
version = "0.1.0"
authors = ["Guilherme <sitegui@sitegui.com.br>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.2"
memmap = "0.7"
tempfile = "3.3"
crossbeam = "0.8"
petgraph = "0.6"
rstar = "0.9"
byteorder = "1.3.2"
clap = { version = "3.0", features = ["derive"] }
num_cpus = "1.13"
flate2 = "1.0"
actix-web = "4.0"
actix-rt = "2.7"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
polyline = "0.9"
geo-types = "0.7"
page_size = "0.4"

[profile.release]
debug = true

[workspace]
members = ["py_ptolemy"]