[package]
name = "pycartograph"
version = "0.1.0"
authors = ["Guilherme <sitegui@sitegui.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.8.1", features = ["extension-module"]}
cartograph = {path = "../cartograph"}

[lib]
name = "cartograph"
crate-type = ["cdylib"]
